--- a/src/main/resources/templates/boards/hello.html
+++ b/src/main/resources/templates/boards/hello.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>테스트페이지!</h1>
-<h1>[[${cnt}]]</h1> // cnt : 게시글 수
-<h1>[[${test[0].title}]]</h1> // test : 게시글 리스트, test[0].title : 첫번째 게시글 제목
+<h1>[[${cnt}]]</h1>
+<h1>[[${test[0].title}]]</h1>
 </body>
 </html>
