[fix] Fix the update, delete function

--- a/src/main/resources/templates/boards/update.html
+++ b/src/main/resources/templates/boards/update.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-  <form id="form" th:action="@{update}" method="get">
+  <form id="form" th:action="@{update}" method="post">
     <p>글번호 : [[${update.boardId}]]</p>
     제목 :
     <div id="title">
